# Jitter

./: JITTER_DESIGN_AND_USAGE.md  WHY_JITTER.md  confirmation_handler.py  implementation_generator.py  llm.py  main.py  not_implemented_handler.py  pyproject.toml  replace_function_code_impl.py  replace_impl.py  test_calculator.py  test_calculator_handler.py  with_replay.py
.github/workflows/: release.yml
examples/: __init__.py  pyproject.toml
examples/calculator/: __init__.py  demo.py  interpreter.py  operations.py  test.py  tokenizer.py
future_ideas/: hot_reload_enhancement_design.md  take_advantage_of_jitter_executing_at_runtime.md
src/: __init__.py  pyproject.toml
src/jitter/: __init__.py
src/jitter/core/: __init__.py  handler.py
src/jitter/generation/: generator.py  llm.py
src/jitter/source_manipulation/: inspection.py  replacement.py
src/jitter/utils/: __init__.py
