[project]
name = "jitter"
version = "0.1.0"
description = "LLM-assisted function implementation generation"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.19.0",
    "pydantic>=2.11.5",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["jitter"]
[tool.hatch.build.targets.wheel]
packages = ["jitter"]